<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PercentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/equalButton"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Zero"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Point"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button0"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toTopOf="@id/button0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Delete"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button_point"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toTopOf="@id/button_point"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/MinusProcent"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button_delete"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_delete"

        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/PlusProcent"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toTopOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/DivideProcent"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button6"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/MultiplyProcent"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintBottom_toBottomOf="@id/button9"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/One"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_plus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Two"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button1"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toTopOf="@id/button1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Three"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button2"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toTopOf="@id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Four"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_divide"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Five"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button4"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toTopOf="@id/button4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Six"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button5"
        app:layout_constraintTop_toTopOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Seven"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Eight"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button7"
        app:layout_constraintTop_toTopOf="@id/button7"
        app:layout_constraintStart_toEndOf="@id/button7"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@color/black"
        android:text="@string/Nine"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/button8"
        app:layout_constraintTop_toTopOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/backButton"
        android:textSize="30sp"
        android:backgroundTint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button_story"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:text="@string/Story"
        android:textSize="30sp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_back"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>